src/test/deca/syntax/invalid/String_Manquant.deca
// Description:
//    test d'un string manquant
//
// Resultats:
//    Une erreur de compilation
//
// Historique:
//    cree le 04/01/2023

{
    STRING S ="Hello world!\n;          
}
